--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>今天吃什么？</title>
+  <title>吃什么呢大转盘</title>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" href="eat-wheel-icon.png" type="image/png">
   <style>
     body {
       font-family: 'Noto Sans SC', sans-serif;
